--- a/{{cookiecutter.project_name}}/.github/workflows/tests.yml
+++ b/{{cookiecutter.project_name}}/.github/workflows/tests.yml
@@ -84,13 +84,13 @@ jobs:
 
       - name: Run Nox
         run: |
-          uv run nox --python=${{"{{"}} matrix.python {{"}}"}}
+          uv run nox --python=${{"{{"}} matrix.python {{"}}"}}  #noqa
 
       - name: Upload coverage data
         if: always() && matrix.session == 'tests'
         uses: "actions/upload-artifact@v4"
         with:
-          name: coverage-data-${{"{{"}} matrix.session {{"}}"}}-${{"{{"}} matrix.python {{"}}"}}-${{"{{"}} matrix.os {{"}}"}}
+          name: coverage-data-${{"{{"}} matrix.session {{"}}"}}-${{"{{"}} matrix.python {{"}}"}}-${{"{{"}} matrix.os {{"}}"}}  # noqa
           path: ".coverage.*"
           if-no-files-found: ignore
           include-hidden-files: true
