--- a/pyproject.toml
+++ b/pyproject.toml
@@ -49,7 +49,7 @@ lint = [
   "pydoclint >=0.0.0",
 ]
 docs = [
-  "furo >=2021.11.12",
+  "shibuya >=2025.1.29",
   "myst-parser == 3.0.1",
   "sphinx >= 4.3.2",
   "sphinx-autobuild >=2021.3.14",
