--- a/.github/workflows/update-instance.yml
+++ b/.github/workflows/update-instance.yml
@@ -3,7 +3,9 @@ on:
   push:
     branches:
       - main
-concurrency: serialize
+concurrency:
+  group: ${{ github.workflow }}
+  cancel-in-progress: true
 env:
   TEMPLATE: cookiecutter-uv-hypermodern-python
   PROJECT: cookiecutter-uv-hypermodern-python
@@ -12,41 +14,55 @@ jobs:
   instance:
     runs-on: ubuntu-latest
     steps:
-      - name: Check out ${{ env.TEMPLATE }}
+      - name: Check out Template Repository
         uses: actions/checkout@v4
         with:
+          repository: bosd/${{ env.TEMPLATE }}
           path: ${{ env.TEMPLATE }}
-      - name: Check out ${{ env.PROJECT }}
+
+      - name: Check out Project Repository
         uses: actions/checkout@v4
         with:
-          repository: "bosd/${{ env.PROJECT }}"
+          repository: bosd/${{ env.PROJECT }}
           path: ${{ env.PROJECT }}
           token: ${{ secrets.X_GITHUB_TOKEN }}
+
       - name: Set up Python 3.10
         uses: actions/setup-python@v5
         with:
           python-version: "3.10"
+
       - name: Install uv
         uses: astral-sh/setup-uv@v3
-        working-directory: ${{ env.TEMPLATE }}
+        with:
+          uv-version: "0.2.14" # It's good practice to pin a version
+
       - name: Install dependencies
-        run: uv pip install
-        working-directory: ${{ env.TEMPLATE }}
-      - name: Install cutty
         working-directory: ${{ env.TEMPLATE }}
         run: |
-          uv run pip install --constraint=.github/workflows/constraints.txt cutty  # Use uv run
-          uv run cutty --version  # Use uv run
-      - name: Import commit into ${{ env.PROJECT }}
-        run: |
-          uv run cutty import --non-interactive --cwd=${PROJECT} --revision=${GITHUB_SHA}  # Use uv run
+          uv pip install --constraint=.github/workflows/constraints.txt cutty
+          uv run cutty --version
+
+      - name: Import changes into project
         working-directory: ${{ env.TEMPLATE }}
+        run: |
+          uv run cutty import --non-interactive --cwd=../${{ env.PROJECT }} --revision=${{ github.sha }}
         env:
           GIT_AUTHOR_NAME: "GitHub Action"
           GIT_AUTHOR_EMAIL: "action@github.com"
-      - name: Push to bosd/${{ env.PROJECT }}
+
+      - name: Push updates to project
+        working-directory: ${{ env.PROJECT }}
         run: |
-          if ! git -C ${TEMPLATE} show --no-patch --format=%B ${GITHUB_SHA} | grep -q ^Retrocookie-Original-Commit:
-          then
-            git -C $PROJECT push https://$GITHUB_ACTOR:$GITHUB_TOKEN@github.com/bosd/$PROJECT.git HEAD:main
+          git config user.name "GitHub Action"
+          git config user.email "action@github.com"
+
+          if git diff --exit-code; then
+            echo "No changes to commit."
+          else
+            git add .
+            git commit -m "chore: Update from template"
+            git push origin main
           fi
+        env:
+          GITHUB_TOKEN: ${{ secrets.X_GITHUB_TOKEN }}
