--- a/.github/workflows/update-instance.yml
+++ b/.github/workflows/update-instance.yml
@@ -13,6 +13,8 @@ env:
 jobs:
   instance:
     runs-on: ubuntu-latest
+    permissions:
+      id-token: write
     steps:
       - name: Check out Template Repository
         uses: actions/checkout@v4
@@ -27,10 +29,10 @@ jobs:
           path: ${{ env.PROJECT }}
           token: ${{ secrets.X_GITHUB_TOKEN }}
 
-      - name: Set up Python 3.10
+      - name: Set up Python 3.13
         uses: actions/setup-python@v5
         with:
-          python-version: "3.10"
+          python-version: "3.13"
 
       - name: Install uv
         uses: astral-sh/setup-uv@v3
