Update update-instance.yml add gh token

--- a/.github/workflows/update-instance.yml
+++ b/.github/workflows/update-instance.yml
@@ -21,6 +21,7 @@ jobs:
         with:
           repository: bosd/${{ env.TEMPLATE }}
           path: ${{ env.TEMPLATE }}
+          token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Check out Project Repository
         uses: actions/checkout@v4
