--- a/.github/workflows/update-instance.yml
+++ b/.github/workflows/update-instance.yml
@@ -40,25 +40,15 @@ jobs:
         with:
           uv-version: "0.2.14" # It's good practice to pin a version
 
-      - name: Create uv virtual environment for build
+      - name: Install dependencies and import changes
+        working-directory: ${{ env.TEMPLATE }}
         run: |
           uv venv
           source .venv/bin/activate
-
-      - name: Install dependencies
-        working-directory: ${{ env.TEMPLATE }}
-        run: |
+          
           uv pip install --constraint=.github/workflows/constraints.txt cutty
-          uv run cutty --version
-
-      - name: Import changes into project
-        working-directory: ${{ env.TEMPLATE }}
-        run: |
-          source .venv/bin/activate # Re-activate the venv for this step
-          uv run cutty import --non-interactive --cwd=../${{ env.PROJECT }} --revision=${{ github.sha }}
-        env:
-          GIT_AUTHOR_NAME: "GitHub Action"
-          GIT_AUTHOR_EMAIL: "action@github.com"
+          cutty --version
+          cutty import --non-interactive --cwd=../${{ env.PROJECT }} --revision=${{ github.sha }}
 
       - name: Push updates to project
         working-directory: ${{ env.PROJECT }}
