--- a/.github/workflows/update-instance.yml
+++ b/.github/workflows/update-instance.yml
@@ -44,7 +44,7 @@ jobs:
         working-directory: ${{ env.PROJECT }}
         run: |
           if [ ! -f cutty.json ]; then
-            echo "{}" > cutty.json
+            echo '{"template": {"location": "https://github.com/bosd/cookiecutter-uv-hypermodern-python.git"}}' > cutty.json
           fi
 
       - name: Install dependencies and import changes
