Fix: Correct cutty.json directory for update-instance workflow

--- a/.github/workflows/update-instance.yml
+++ b/.github/workflows/update-instance.yml
@@ -55,7 +55,7 @@ jobs:
           {
             "template": {
               "location": "$template_url",
-              "directory": "$template_dir",
+              "directory": "",
               "revision": "${{ github.sha }}"
             },
             "bindings": {}
